...
          tabBarIcon: ({ color }) => <Wallet size={28} color={color} />,
        }}
      />
      <Tabs.Screen
        name="tasks/index"
        options={{
          title: 'Tarefas',
          tabBarIcon: ({ color }) => <CheckCircle size={28} color={color} />,
        }}
      />
      <Tabs.Screen
        name="luma/index"
        options={{
...
